--- a/www/index.html
+++ b/www/index.html
@@ -11,21 +11,36 @@
 </head>
 <body>
 <div id="main" data-role="page">
+    <div data-role="header" data-position="fixed">
+        <h1>Where'd We Eat?</h1>
+        <a href="#addPlace" data-icon="plus">Add</a>
+    </div>
     <div data-role="content">
-        <ul id="myRestaurants" data-role="listview" data-filter="true">
-            <li><a>Redhouse</a></li>
-            <li>IHOP</li>
-        </ul>
+        <ul id="myPlaces" data-role="listview" data-filter="true" data-filter-placeholder="Search places"></ul>
     </div>
 </div>
+<div id="addPlace" data-role="page">
+    <div data-role="header" data-position="fixed">
+        <h1>Where'd We Eat?</h1>
+    </div>
+    <div data-role="content">
+        <form id="formAddPlace">
+            <label for="placeName">Where were you?</label>
+            <input id="placeName" type="text" placeholder="Taco Bell"/>
+            <label for="date">When did you go?</label>
+            <input id="date" type="date"/>
+            <label for="friends">Who were you with?</label>
+            <input id="friends" type="text" placeholder="Bill Gates, Mom"/>
+            <input id="cancelPlace" type="button" value="Cancel" onclick="app.clearPlaceForm()"/>
+            <input id="submitPlace" type="button" value="Add" onclick="app.submitPlaceForm()"/>
+        </form>
+    </div>
+</div>
+<script src="phonegap.js"></script>
 <script src="js/jquery-2.0.3.min.js"></script>
 <script src="js/jquery.mobile-1.3.2.min.js"></script>
-<script src="phonegap.js"></script>
+<script src="js/handlebars-1.0.0.runtime.js"></script>
+<script src="templates/placeListItem.js"></script>
 <script src="js/index.js"></script>
-<script>
-    $(document).ready(function(){
-        document.addEventListener('deviceready', this.onDeviceReady, false);
-    });
-</script>
 </body>
 </html>
