--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport"
-          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <title>Where'd We Eat?</title>
@@ -28,12 +28,9 @@
         <input id="placeName" type="text" placeholder="Taco Bell"/>
         <label for="date">When did you go?</label>
         <input id="date" type="date" />
-        <label for="txtFriends">Who were you with?</label>
-        <div data-role="controlgroup" data-type="horizontal">
-            <input id="txtFriends" type="text" placeholder="Bill Gates, Mom"/>
-            <a id="addFriend" data-icon="plus" onclick="app.addFriend()"></a>
-        </div>
-        <ul id="listFriends" data-role="listview"></ul>
+        <label for="listFriends">Who were you with?</label>
+        <ul id="listFriends" data-role="listview" data-filter="true" data-filter-placeholder="Mom, Bill Gates, etc" data-filter-reveal="true"></ul>
+        <br/>
         <div data-role="controlgroup" data-type="horizontal">
             <a id="cancelPlace" data-role="button" onclick="app.clearPlaceForm()">Cancel</a>
             <a id="submitPlace" data-role="button" onclick="app.submitPlaceForm()">Add</a>
@@ -41,10 +38,11 @@
     </div>
 </div>
 <script src="phonegap.js"></script>
-<script src="js/jquery-2.0.3.min.js"></script>
-<script src="js/jquery.mobile-1.3.2.min.js"></script>
-<script src="js/handlebars-1.0.0.runtime.js"></script>
+<script src="lib/jquery-2.0.3.min.js"></script>
+<script src="lib/jquery.mobile-1.3.2.min.js"></script>
+<script src="lib/handlebars-1.0.0.runtime.js"></script>
 <script src="templates/placeListItem.js"></script>
+<script src="js/apiLocal.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
